--- a/package.json
+++ b/package.json
@@ -15,25 +15,17 @@
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-sql": "^2.3.1",
-    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "lucide-vue-next": "^0.562.0",
-    "reka-ui": "^2.7.0",
-    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "vee-validate": "^4.15.1",
     "vue": "^3.5.13",
-    "vue-sonner": "^2.0.9",
-    "zod": "3.25.76"
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.57.0",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.0.8",
     "@vitejs/plugin-vue": "^5.2.1",
-    "tw-animate-css": "^1.4.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
