--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "lucide-vue-next": "^0.562.0",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.13",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.57.0",
     "@tauri-apps/cli": "^2",
     "@types/node": "^25.0.8",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
